<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_scan_qr"
        android:icon="@drawable/ic_action_qr"
        android:title="@string/info"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_scan_rfid"
        android:icon="@drawable/ic_action_rfid"
        android:title="@string/info"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info"
        android:title="@string/profile"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_options"
        android:title=""
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_share_app"
                android:icon="@drawable/ic_share"
                android:title="@string/share_app"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/setting"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_about_us"
                android:icon="@drawable/ic_about_us"
                android:title="@string/about_us"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>
