<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/about_us_logo" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/levare_consultants_pvt_ltd"
            android:textColor="@color/brown"
            android:textSize="20sp" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/activity_login_background" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/rlCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlTop"
        android:padding="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/curve_shape">

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/sign_in"
            android:textColor="@color/blue"
            android:textSize="22sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSignIn"
            android:layout_margin="8dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/login_round_back"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="16dp"
                android:hint="@string/user_name"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890.@"
                android:inputType="textFilter"
                android:maxLines="1"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilUsername"
            android:layout_margin="8dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="16dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/llWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilPassword"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/ivWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_warning" />

            <TextView
                android:id="@+id/tvWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/please_enter_a_valid_username_amp_password"
                android:textColor="@color/red"
                android:textSize="8sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <Button
            android:id="@+id/mbtnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilPassword"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/roboto_bold"
            android:onClick="login"
            android:padding="12dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlBottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tvInfo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/david_libre_medium"
            android:onClick="launchForgotPasswordActivity"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/design_by_applexinfotech"
            android:textColor="@color/blue_light"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </RelativeLayout>

</RelativeLayout>
