<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".fragment.AssetListFragment">

    <RelativeLayout
        android:id="@+id/assetMenu"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/black_blue">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:layout_toEndOf="@+id/ivBack"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/asset_list"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvSubmitBatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/submit"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_small" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/assetMenu"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/llSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtAssetSearch"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.8"
                android:inputType="text"
                android:maxLines="1"
                android:background="@drawable/img_round_back"
                android:drawableStart="@drawable/ic_search_item"
                android:hint="@string/asset_number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <FrameLayout
                android:id="@+id/flAssetSort"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_weight="0.1"
                android:background="@drawable/img_round_back">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:background="@drawable/ic_sort" />

            </FrameLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListAsset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/llSearch"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/img_round_back"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/lay_asset_list" />
    </RelativeLayout>

</RelativeLayout>